test_case/Rust-GCC_gccrs/539_1019623660_1.rs

~/src/gccrs/gcc/testsuite/rust/compile/bytecharstring.rs:6:12: error: cannot strip expression in this position - outer attributes not allowed
    6 |   let _c = '\xef';        // { dg-error "out of range" }
      |            ^
